# GA_Prospective_Study

./: README.md  ga_optimeyes.py  pyproject.toml  some_prelim_inter-rater_variability.py
3.5.1_repeated_measures_analysis/: dice.py  inter-rater-agreement.py  intra-rater-var.py
